--- a/src/views/Profiles/Settings/index.css
+++ b/src/views/Profiles/Settings/index.css
@@ -1,5 +1,6 @@
 .model-width{
     width:500px;
+    left:0
 }
 
 .filter-model-width{
@@ -10,7 +11,9 @@
 /* Styles for screens smaller than or equal to 600px */
 @media (max-width: 600px) {
     .model-width{
-        width:100%
+        width:250px;
+        left:-100px;
+        right:0
     }
     .filter-model-width{
         width:200px;
@@ -21,6 +24,6 @@
 /* Styles for screens between 601px and 900px */
 @media (min-width: 601px) and (max-width: 900px) {
     .model-width{
-        width:400px
+        width:350px
     }
 }
